--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: advy_chat
 description: "Advy chat allows user to get support from any application which is using this package."
 version: 1.0.0
-homepage: https://github.com/ShashwatUnibit/advyChat
-license: MIT
+homepage: https://github.com/your-username/advy_chat
+repository: https://github.com/your-username/advy_chat
+issue_tracker: https://github.com/your-username/advy_chat/issues
 
 environment:
   sdk: ^3.8.1
