--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: advy_chat
 description: "Advy chat allows user to get support from any application which is using this package."
-version: 1.0.3
+version: 1.1.0
 homepage: https://github.com/your-username/advy_chat
 repository: https://github.com/your-username/advy_chat
 issue_tracker: https://github.com/your-username/advy_chat/issues
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter: ^4.13.0
+  flutter_inappwebview: ^6.1.5
   get: ^4.7.2
 
 dev_dependencies:
